# stretchme

./: README.md  pyproject.toml
mmpose/models/: builder.py
notebooks/: test.ipynb
src/stretchme/: temp.py  temp1.py
src/stretchme/mmpose/apis/: inference.py
src/stretchme/mmpose/models/: builder.py
src/stretchme/pose/apis/: inference.py
src/stretchme/pose/datasets/: dataset_info.py
src/stretchme/pose/datasets/pipelines/: __init__.py  shared_transform.py
stretchme/mmpose/apis/: __init__.py  inference.py
stretchme/mmpose/core/bbox/: __init__.py  transforms.py
stretchme/mmpose/datasets/: __init__.py
stretchme/mmpose/datasets/pipelines/: __init__.py
stretchme/mmpose/models/: __init__.py
stretchme/mmpose/utils/: hooks.py
tests/: test_stretchme.py
